Ensure scaled image is not squished
I don't know what layout is smoking.
Width needs to be touched for image to keep its ratio.

--- a/assets/css/views/images.css
+++ b/assets/css/views/images.css
@@ -153,8 +153,8 @@ div.image-container video {
 }
 
 .image-scaled {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 /* Due to the address bar hiding/reappearing in mobile browsers, viewport
